# UniverseRoyale

./: Cargo.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
message_derive/: Cargo.toml
message_derive/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/plugins/: mod.rs  replication_plugin.rs
shared/src/systems/: client_connection.rs  mod.rs  stream_connection.rs  tcp_settings_functions.rs
