[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
message_derive = { path = "../message_derive" }
bevy = {workspace = true}
log = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
shared = { path = "../shared" }
bevy-inspector-egui = {workspace = true}
