[package]
name = "shared"
version.workspace = true
edition.workspace = true

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
bevy = {workspace = true}
log = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
bevy-inspector-egui = {workspace = true}
serde = {workspace = true}
bincode = {workspace = true}
erased-serde = {workspace = true}
typetag = {workspace = true}